# audio-features-api

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
app/: main.py
app/core/: audio_utils.py  config.py  models.py  resolvers.py
app/tests/: test_api.py
app/tests/integration/: test_resolvers_live.py
scripts/: setup_env.sh
