[project]
name = "track-features-api"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.9.0"
httpx = "^0.27.2"
librosa = "^0.10.2.post1"
soundfile = "^0.12.1"
numpy = "^1.26.4"
scipy = "^1.11.4"
pyloudnorm = "^0.1.1"
mutagen = "^1.47.0"

# Optional:
essentia = {version="^2.1.0", optional=true}
tensorflow = {version="^2.16.1", optional=true}
